# python-project-49

./: .flake8  .gitignore  Makefile  README.md  brain_calc.cast  brain_even.cast  brain_games.cast  brain_gcd.cast  brain_prime.cast  brain_progression.cast  demo.cast  pyproject.toml
.github/workflows/: hexlet-check.yml
brain_games/: engine.py
brain_games/cli/: cli.py
brain_games/games/: calc.py  calculator.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
