[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Lazer"]
license = "None"
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Games/Entertainment"
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[tool.poetry.urls]
repository = "https://github.com/chifcrow/python-project-49"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain_games = "brain_games.scripts.brain_games:main"
brain_even = "brain_games.scripts.brain_even:main"
brain_calc = "brain_games.scripts.brain_calc:main"
brain_gcd = "brain_games.scripts.brain_gcd:main"
brain_progression = "brain_games.scripts.brain_progression:main"
brain_prime = "brain_games.scripts.brain_prime:main"